--- a/Calculadora/styles/style.css
+++ b/Calculadora/styles/style.css
@@ -1,7 +1,7 @@
 .container {
-    width: 350px;
+    width: 50x;
     margin: 10px;
-    border: 5px white solid;
+    border: 5px black;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     padding: 30px;
